--- a/StringCommander/StringCommander.csproj
+++ b/StringCommander/StringCommander.csproj
@@ -42,12 +42,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AliasCommand.cs" />
     <Compile Include="Command.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="MoveCommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuitCommand.cs" />
     <Compile Include="Room.cs" />
+    <Compile Include="SearchCommand.cs" />
+    <Compile Include="Singleton.cs" />
+    <Compile Include="UI\RoomWindow.cs" />
+    <Compile Include="UI\UIManager.cs" />
+    <Compile Include="UI\Window.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
